[package]
name = "cwl-mount"
version = "0.1.1"
edition = "2021"
description = "CloudWatch Logs as a file system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bytes = "1.1.0"
chrono = "0.4.19"
clap = "2.34.0"
crossbeam = "0.8.1"
ctrlc = "3.2.1"
cwl-lib = { path = "../cwl-lib" }
env_logger = "0.9.0"
format-cwl-log-event = { path = "../format-cwl-log-event" }
fuse = { path = "../fuse" }
fuser = { version = "0.9.1", features = ["abi-7-30"] }
libc = "0.2.112"
regexes = { path = "../regexes" }
tokio = { version = "1.15.0", features = ["full", "tracing"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
