[package]
name = "cwl-lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.2.0"
aws-sdk-cloudwatchlogs = "0.2.0"
aws-smithy-http = "0.32.0"
aws-types = "0.2.0"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
derivative = "2.2.0"
format-cwl-log-event = { path = "../format-cwl-log-event" }
futures = "0.3.18"
leaky-bucket = "0.11.0"
lru = "0.7.0"
regex = "1.5.4"
regexes = { path = "../regexes" }
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"

[dev-dependencies]
tokio-test = "0.4.2"
