[package]
name = "cwl-lib"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.3.0"
aws-sdk-cloudwatchlogs = "0.3.0"
aws-smithy-http = "0.33.1"
aws-types = "0.3.0"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
derivative = "2.2.0"
format-cwl-log-event = { path = "../format-cwl-log-event" }
futures = "0.3.19"
leaky-bucket = "0.11.0"
lru = "0.7.1"
regex = "1.5.4"
regexes = { path = "../regexes" }
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full", "tracing"] }
tracing = "0.1.29"

[dev-dependencies]
tokio-test = "0.4.2"
