[package]
name = "format-cwl-log-event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest_generator = "2.1.3"
quote = "1.0.10"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
pest = "2.1.3"
thiserror = "1.0.30"
