[package]
name = "fuse"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
chrono = "0.4.19"
cwl-lib = { path = "../cwl-lib" }
derivative = "2.2.0"
lru = "0.7.1"
slotmap = "1.0.6"
tokio = { version = "1.15.0", features = ["full", "tracing"] }
